--- a/data/projects.json
+++ b/data/projects.json
@@ -7,9 +7,9 @@
     "status": "en_cours",
     "order": 1,
     "instagram": "ok_kult_",
-    "dates": ["2025-10-23T19:00:00+02:00","2025-11-07T19:00:00+01:00"],
-    "datesDisplayFr": "Dates : 23 octobre 2025 ,  7 novembre 2025",
-    "sortDate": "2025-11-07",
+    "startDate": "2025-10-23",
+    "endDate": null,
+    "sortDate": "2025-10-23",
     "linkFr": "/fr/events/ok-kult",
     "bodyFr": "ØK KÜLT est un rite artistique contemporain qui relie le monde transcendantal et le monde réel. Les artistes — véritables magicien·ne·s — transforment la matière et le son pour ouvrir une fenêtre sur notre proche avenir. Venez voir, écouter et ressentir « l'autre monde »."
   },
